# mathlab

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build.sh  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  render.yaml  requirements-local.txt  requirements.txt  server.py
calculator/: views.py
chat/: consumers.py  models.py  routing.py  serializer.py  tasks.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0003_message_chat_messag_receive_71134e_idx.py
config/: entrypoint.sh  gunicorn-cfg.py
data/fixtures/: math_news.json  mathlab_carousels.json  post_categories.json
explainme/: apps.py  decorators.py  scraper.py  tests.py  urls.py  views.py
forum/: apps.py  documents.py  models.py  serializers.py  service.py  signals.py  tests.py  urls.py  utils.py  views.py
forum/elasticsearch/: documents.py
forum/migrations/: 0001_initial.py  0002_initial.py  0002_rename_category_id_post_category_and_more.py  0003_alter_post_options_alter_category_category_name.py  0003_alter_post_post_dislikes_alter_post_post_likes_and_more.py  0003_comment_modified_at_alter_comment_comment.py  0003_remove_post_categories_delete_category_and_more.py  0003_remove_post_category_post_categories_and_more.py  0004_alter_comment_modified_at.py  0004_alter_post_categories.py  0004_alter_post_options.py  0004_remove_post_forum_post_created_9298c7_idx_and_more.py  0005_alter_post_options.py  0005_rename_forum_post_created_203958_idx_forum_post_created_d558d2_idx_and_more.py  0006_alter_post_categories.py
forum/templatetags/: filters.py
graphbuilder/: apps.py  scraper.py  service.py  tests.py  urls.py  views.py
math_news/: apps.py  models.py  scraper.py  serializers.py  tasks.py  tests.py  urls.py  views.py
math_news/migrations/: 0001_initial.py  0002_alter_mathnews_options_mathnews_additional_info_and_more.py  0002_alter_mathnews_table.py  0003_alter_mathnews_new_url_alter_mathnews_title.py  0004_mathnews_additional_info.py  0005_mathnews_published_at.py  0006_alter_mathnews_options.py
mathlab/: asgi.py  celery.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
server/apps/: celery_tasks.py
server/common/: celery.py  constants.py  enums.py  forms.py  http.py  middlewares.py  mixins.py  validators.py
server/settings/: asgi.py  celery.py  common.py  wsgi.py
server/templates/: 403.html  (+2 more)
solvexample/: apps.py  decorators.py  service.py  tests.py  urls.py  views.py
staticfiles/: explainme.css  graphbuilder.css  toasts.js
tests/: mixins.py  testcases.py  testutils.py
users/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
(+623 files in other folders)
